fix interacitve unable to close

--- a/demo/index.html
+++ b/demo/index.html
@@ -201,7 +201,7 @@ $('#api_destory').on('click',function(){
 });
         </code></pre>
         <div class="example">
-            <span id="api_tooltip" data-tooltip-content="tooltip text">I have a tooltip</span>
+            <span id="api_tooltip" title="tooltip text">I have a tooltip</span>
             <div>
              <button id="api_show">show</button>
                 <button id="api_hide">hide</button>
