--- a/demo/index.html
+++ b/demo/index.html
@@ -18,7 +18,7 @@
         <script src="js/vendor/jquery-1.8.0.min.js"></script>
         <script src="js/vendor/prism.js"></script>
         <script src="js/vendor/jquery.toc.js"></script>
-        <script src="../src/jquery.tooltip.js"></script>
+        <script src="../src/jquery-tooltip.js"></script>
     </head>
 <body>
 <!--[if lt IE 7]>
