update demo and doc

--- a/demo/index.html
+++ b/demo/index.html
@@ -167,13 +167,13 @@ $(".tooltip-ajax").tooltip({
             <pre class="has-example"><code class="language-javascript">
 $(".tooltip-inline").tooltip({
     inline: true,
-    content: '#tip'
+    title: '#tip'
 });
 
 // add content from next siblings
 $(".tooltip-inline-siblings").tooltip({
     inline: true,
-    content: '+'
+    title: '+'
 });
             </code></pre>
             <div class="positon_wrap example">
@@ -187,7 +187,7 @@ $(".tooltip-inline-siblings").tooltip({
                     $(document).ready(function() {
                         $(".tooltip-inline").tooltip({
                             inline: true,
-                            content: '#tip'
+                            title: '#tip'
                         });                             
                     });
                 </script>
@@ -203,7 +203,7 @@ $(".tooltip-inline-siblings").tooltip({
                     $(document).ready(function() {
                         $(".tooltip-inline-siblings").tooltip({
                             inline: true,
-                            content: '+'
+                            title: '+'
                         });                             
                     });
                 </script>
