update skin usage

--- a/demo/index.html
+++ b/demo/index.html
@@ -226,7 +226,7 @@ $(".tooltip-ajax").asTooltip({
                     
                     $(document).ready(function() {
                         $(".tooltip-skin").asTooltip({
-                            skin: 'sea'
+                            skin: 'asTooltip_sea'
                         });                             
                     });
                 </script>
