--- a/examples/index.html
+++ b/examples/index.html
@@ -14,7 +14,7 @@
   <script src="js/jquery.js"></script>
   <script src="js/prism.js"></script>
   <script src="js/jquery.toc.js"></script>
-  <script src="../dist//jquery-asTooltip.js"></script>
+  <script src="../dist/jquery-asTooltip.js"></script>
 </head>
 <body>
   <!--[if lt IE 8]>
